--- a/index.html
+++ b/index.html
@@ -30,6 +30,38 @@
 
             <button class="btn btn-line">Make your photobook</button>
         </header>
+        <section id="features">
+            <img src="img/steps.png" alt="">
+            <div class="text">
+                <div class="first"><div>Download <br> photos</div></div>
+                <div class="second"><div>Design your <br> photobook</div></div>
+                <div class="third"><div>Pay <br> for service</div></div>
+                <div class="fourth"><div>Get your <br> photobook</div></div>
+            </div>
+        </section>
+        <section id="advantage">
+            <div class="view-port">
+                <h1>Advantage</h1>
+                <div class="row">
+                    <div class="col">
+                        <img src="img/soc1.png" alt="">
+                        <h3>Import photos <br> from your social networks</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi eos omnis, maxime quas excepturi non.</p>
+                    </div>
+                    <div class="col">
+                        <img src="img/soc2.png" alt="">
+                        <h3>Photo editing</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi eos omnis, maxime quas excepturi non.</p>
+                    </div>
+                    <div class="col">
+                        <img src="img/soc3.png" alt="">
+                        <h3>Templates</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi eos omnis, maxime quas excepturi non.</p>
+                    </div>
+                </div>
+                <button class="btn btn-red">make your photobook</button>
+            </div>
+        </section>
     </div>
 </body>
 </html>
