--- a/index.html
+++ b/index.html
@@ -122,6 +122,30 @@
                 </div>
             </div>
         </section>
+        <section id="testimonials">
+            <div class="view-port">
+                <div class="content">
+                    <h1>Testimonials</h1>
+                    <div class="author">
+                        <img src="img/face.png">
+                        <div>
+                            <h2>John Doe</h2>
+                            <h5>Photographer</h5>
+                        </div>
+                    </div>
+                    <div class="text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, minima! Dolores omnis corporis adipisci ipsum quam necessitatibus nesciunt nostrum, doloremque quisquam voluptates voluptas quia, quidem minima incidunt vitae animi autem!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, dolor odio ipsa minima incidunt iure necessitatibus quibusdam repellendus quas porro alias placeat blanditiis vel nesciunt cumque, quisquam at laboriosam culpa.</p>
+                    </div>
+                    <div class="next">
+                        <span>Next testimonial <i class="fa fa-long-arrow-right"></i></span>
+                    </div>
+                    <div class="button">
+                        <button class="btn btn-line">make your photobook</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
