--- a/index.html
+++ b/index.html
@@ -146,6 +146,43 @@
                 </div>
             </div>
         </section>
+        <section id="steps">
+            <div class="view-port tiles">
+                <div class="tile">
+                    <div class="header">
+                        Terms
+                    </div>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim sequi nulla ullam molestiae eius cumque.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, quasi.</p>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="header">
+                        Payment
+                    </div>
+                    <div class="content">
+                        <p>Lorem, ipsum.</p>
+                        <ul>
+                            <li>Item 1</li>
+                            <li>Item 2</li>
+                            <li>Item 3</li>
+                            <li>Item 4</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="header">
+                        Shipping
+                    </div>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, sit!</p>
+                        <p class="red">Lorem, ipsum dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-red">make your photobook</button>
+        </section>
     </div>
 </body>
 </html>
