--- a/index.html
+++ b/index.html
@@ -183,6 +183,38 @@
             </div>
             <button class="btn btn-red">make your photobook</button>
         </section>
+        <footer id="footer">
+            <div class="view-port content">
+                <div class="links">
+                    <ul>
+                        <li><a href="">Item 1</a></li>
+                        <li><a href="">Item 2</a></li>
+                        <li><a href="">Item 3</a></li>
+                        <li><a href="">Item 4</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="">Item 1</a></li>
+                        <li><a href="">Item 2</a></li>
+                        <li><a href="">Item 3</a></li>
+                        <li><a href="">Item 4</a></li>
+                    </ul>
+                    <ul class="first-letter">
+                        <li><a href="">Item 1</a></li>
+                        <li><a href="">Item 2</a></li>
+                        <li><a href="">Item 3</a></li>
+                        <li><a href="">Item 4</a></li>
+                    </ul>
+                </div>
+                <div class="social">
+                    <i class="fa fa-facebook-official"></i>
+                    <i class="fa fa-vk"></i>
+                    <i class="fa fa-instagram"></i>
+                </div>
+            </div>
+            <div class="copyright">
+               &#169; 2019. All right reserves.
+            </div>
+        </footer>
     </div>
 </body>
 </html>
